# scANTIPODE

./: README.md  model_distributions.py  model_functions.py  pyproject.toml  pytest.ini  setup.py
antipode/: __init__.py  anndata_utils.py  antipode_mixins.py  antipode_model.py  h_antipode_model.py  model_functions.py  model_modules.py  phylo.py  plotting.py  post.py  train_utils.py
assets/: SCVI_LICENSE
examples/: 1.9.1.8.1.1_Relu-Tighter-ClusterScale.ipynb  1.9.1.8.1.3_AuxNormal-LowerTemp.ipynb  1.9.1.8.1.3_AuxNormal-OriginalFest-Looser.ipynb  1.9.1.8.1.3_AuxNormal-OriginalFest-LowerTemp.ipynb  1.9.1.8.1.3_AuxNormal-OriginalFest.ipynb  1.9.1.8.1.3_AuxNormal.ipynb  1.9.1.8.1.3_OriginalFest-TaxonProbs.ipynb  1.9.1.8.1.3_RedoWithLowerEpsilon.ipynb  1.9.1.8.1.3_TaxonProbs-NewFEST.ipynb  1.9.1.8.1.3_TaxonProbs-OriginalFEST.ipynb  1.9.1.8.1_MvQTest.ipynb  1.9.1.8.1_RevampSaveLoadPAL-PsiNormal-Relu-Tighter-Free.ipynb  1.9.1.8.1_RevampSaveLoadPAL-PsiNormal-Relu-Tighter.ipynb  1.9.1.8.1_RevampSaveLoadPAL-PsiNormal-Relu.ipynb  1.9.1.8.1_RevampSaveLoadPAL-PsiNormal-SmallerEncoder-Tighter.ipynb  1.9.1.8.1_RevampSaveLoadPAL-PsiNormal-SmallerEncoder-test.ipynb  1.9.1.8.1_RevampSaveLoadPAL-PsiNormal-SmallerEncoder.ipynb  1.9.1.8.1_RunImmune.ipynb  1.9.1.8.1_RunJorstadAllNoPsi.ipynb  1.9.1.8.1_RunRetinaAllNoPsi.ipynb  1.9.1.8.1_RunRetinaNoPsi.ipynb  1.9.1.8.1_RunSiletti.ipynb  1.9.1.8.3_Dev-Free-AddSecCov-NoDC.ipynb  1.9.1.8.3_Dev-Free-NoPsi.ipynb  1.9.1.8.3_Dev-Longer-DMR-PerGeneEstimateAccuracy.ipynb  1.9.1.8.3_Dev-Longer-DMR.ipynb  1.9.1.8.3_Dev-Longer-NN.ipynb  (+60 more)
(+255 files in other folders)
